<resources>
    <string name="app_name">BeHere</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="qrcode_desc">QR Code</string>
    <string name="password_desc">Password</string>
    <string name="schedule_text">Schedule: %s</string>
    <string name="subject_name_text">Subject Name</string>
    <string name="location_text">Location: %s</string>
    <string name="link_title_text">Link Title</string>
    <string name="link_description_text">Link Description</string>
    <string name="result_failed">Failed</string>
    <string name="result_try_again">Try Again</string>
    <string name="result_success">Success</string>
    <string name="result_ok">Ok</string>
    <string name="logout_text">Logout</string>
    <string name="set_password_text">Set Password</string>
    <string name="timeout_text">Timeout (minutes)</string>
    <string name="password_text">********</string>
    <string name="enter_password_text">Enter Password</string>
    <string name="generated_qr_code_text">Generated QR COde</string>
    <string name="set_qr_code_text">Set QR Code</string>
    <string name="student_link">DISCENTE</string>
    <string name="professor_link">DOCENTE</string>
    <string name="no_links">Nenhum vínculo Cadastrado</string>
    <string name="no_subjects">Nenhuma disciplina Cadastrada</string>
    <string name="no_students">Nenhum aluno encontrado.</string>
    <string name="student_name_text">Student Name</string>
</resources>
