<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="50dp"
              tools:context="br.ufrn.imd.behere.activities.ProfessorPasswordActivity">

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_text"/>

    <EditText
        android:id="@+id/et_timeout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/timeout_text"
        android:inputType="number"
        android:maxLength="3"/>

    <Button
        android:id="@+id/btn_enter_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="setPassword"
        android:text="@string/set_password_text"/>

</LinearLayout>
